Update 't8pqqmyyt-go' component image to: quay.io/rhtaptestqa/rhtap-qe:f05d99f11d094fb36b426d39e0762feb171aa212@sha256:debea3676a02e180fb4dbdc21f02b66193a0cc01b4103686c0faf61f1c56a34a

--- a/components/t8pqqmyyt-go/overlays/development/deployment-patch.yaml
+++ b/components/t8pqqmyyt-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: t8pqqmyyt-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtaptestqa/rhtap-qe:f05d99f11d094fb36b426d39e0762feb171aa212@sha256:debea3676a02e180fb4dbdc21f02b66193a0cc01b4103686c0faf61f1c56a34a
+          name: container-image
